--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,8 @@
 # Ignore all local history of files
 **/.history
 
+.pytest_cache/*
+**/__pycache__/*
 # End of https://www.gitignore.io/api/visualstudiocode
+
+
